--- a/public_html/layouts/basic/styles/pages/Settings/_Shop.scss
+++ b/public_html/layouts/basic/styles/pages/Settings/_Shop.scss
@@ -5,6 +5,7 @@
 	cursor: pointer;
 	&__container {
 		min-height: calculate-rem(130px);
+		height: 100%;
 	}
 
 	&__img {
